@@ -1,7 +1,6 @@
 #!/bin/sh
 
 export CATALINA_OPTS="$CATALINA_OPTS -Dfile.encoding=UTF8"
-export CATALINA_OPTS="$CATALINA_OPTS --illegal-access=deny"
 export CATALINA_OPTS="$CATALINA_OPTS --add-opens java.base/java.lang=ALL-UNNAMED"
 export CATALINA_OPTS="$CATALINA_OPTS --add-opens java.base/java.io=ALL-UNNAMED"
 export CATALINA_OPTS="$CATALINA_OPTS --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED"
